@@ -6,8 +6,8 @@
 # DP: Dpatch author: Denis Barbier <barbier@debian.org>
 # DP: Patch author: Various
 # DP: Upstream status: In CVS
-# DP: Status Details: updated to ftp://elsie.nci.nih.gov/pub/tzdata2006a.tar.gz
-# DP: Date: 2006-02-02
+# DP: Status Details: updated to ftp://elsie.nci.nih.gov/pub/tzdata2006B.tar.gz
+# DP: Date: 2006-03-17
 
 Index: timezone/africa
 ===================================================================
@@ -15,7 +15,7 @@ Index: timezone/africa
 +++ timezone/africa
 @@ -1,4 +1,5 @@
 -# @(#)africa	7.39
-+# @(#)africa	7.40
++# @(#)africa	8.1
 +# <pre>
  
  # This data is by no means authoritative; if you think you know better,
@@ -26,7 +26,7 @@ Index: timezone/antarctica
 +++ timezone/antarctica
 @@ -1,4 +1,5 @@
 -# @(#)antarctica	7.25
-+# @(#)antarctica	7.30
++# @(#)antarctica	8.1
 +# <pre>
  
  # From Paul Eggert (1999-11-15):
@@ -89,7 +89,7 @@ Index: timezone/asia
 +++ timezone/asia
 @@ -1,4 +1,5 @@
 -# @(#)asia	7.85
-+# @(#)asia	7.91
++# @(#)asia	8.1
 +# <pre>
  
  # This data is by no means authoritative; if you think you know better,
@@ -234,7 +234,7 @@ Index: timezone/australasia
 +++ timezone/australasia
 @@ -1,4 +1,6 @@
 -# @(#)australasia	7.73
-+# @(#)australasia	7.78
++# @(#)australasia	8.1
 +# <pre>
 +
  # This file also includes Pacific islands.
@@ -333,7 +333,7 @@ Index: timezone/backward
 +++ timezone/backward
 @@ -1,4 +1,4 @@
 -# @(#)backward	7.29
-+# @(#)backward	7.30
++# @(#)backward	8.1
  
  # This file provides links between current names for time zones
  # and their old names.  Many names changed in late 1993.
@@ -385,7 +385,7 @@ Index: timezone/europe
 +++ timezone/europe
 @@ -1,4 +1,5 @@
 -# @(#)europe	7.95
-+# @(#)europe	7.96
++# @(#)europe	8.1
 +# <pre>
  
  # This data is by no means authoritative; if you think you know better,
@@ -396,7 +396,7 @@ Index: timezone/northamerica
 +++ timezone/northamerica
 @@ -1,4 +1,6 @@
 -# @(#)northamerica	7.79
-+# @(#)northamerica	7.88
++# @(#)northamerica	8.1
 +# <pre>
 +
  # also includes Central America and the Caribbean
@@ -933,7 +933,7 @@ Index: timezone/southamerica
 +++ timezone/southamerica
 @@ -1,4 +1,5 @@
 -# @(#)southamerica	7.61
-+# @(#)southamerica	7.66
++# @(#)southamerica	8.1
 +# <pre>
  
  # This data is by no means authoritative; if you think you know better,
@@ -986,7 +986,7 @@ Index: timezone/systemv
 +++ timezone/systemv
 @@ -1,24 +1,24 @@
 -# @(#)systemv	7.3
-+# @(#)systemv	7.5
++# @(#)systemv	8.1
  
  # Old rules, should the need arise.
  # No attempt is made to handle Newfoundland, since it cannot be expressed
@@ -1624,7 +1624,7 @@ Index: timezone/zone.tab
 +++ timezone/zone.tab
 @@ -1,4 +1,4 @@
 -# @(#)zone.tab	1.32
-+# @(#)zone.tab	1.33
++# @(#)zone.tab	8.1
  #
  # TZ zone descriptions
  #
