@@ -25,6 +25,7 @@ glibc (2.3.6-4) UNRELEASED; urgency=low
     argument contains the ! modifier.
   * Fix forward-backward-collation.diff: the change in strcoll_l.c has to
     be applied at several places.  Closes: #357390.
+  * Update timezone data files to tzdata2006b (no data change, only comments).
 
   [ Clint Adams ]
   * Add mips-bits-resource.diff: add RLIMIT_NICE and RLIMIT_RTPRIO.
